# test_task_ITK-academy

./: .env.template  .gitignore  Makefile  README.md  commands.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
app/: main.py
app/alembic/versions/: 2025_06_09_1808-c9435a549639_add_wallets_table.py  2025_06_09_2140-069dcb6ddd74_add_operations_table.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  wallets.py
app/api/api_v1/actions/: __init__.py  wallets.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  operation.py  wallet.py
app/core/models/mixins/: __init__.py  created_at_column.py  uuid_id_pk.py
app/core/schemas/: operation.py  wallet.py
app/core/schemas/enums/: __init__.py  operation_types.py
app/utils/: __init__.py  case_converter.py  generics.py
tests/: conftest.py  constants.py  test_wallet.py
