[tool.poetry]
name = "test_task_ITK-academy"
version = "0.1.0"
description = ""
authors = ["Shilov Ilia <shilov.spike2250@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
orjson = "^3.10.18"
httpx = "^0.28.1"
anyio = "^4.9.0"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
